@@ -2246,7 +2246,7 @@ GIPAW http://qeforge.qe-forge.org/svn/qe-gipaw/trunk
 \section{Using git}
 \label{Sec:git}
 
-The following links conatin an introduction to \texttt{git}:\\
+The following links contain an introduction to \texttt{git}:\\
 https://git-scm.com/book/en/v2/Getting-Started-Git-Basics\\
 https://git-scm.com/course/svn.html
 
